# zap1-verify

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: lib.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
