[package]
name = "zap1-verify-wasm"
version = "0.2.0"
edition = "2021"
description = "WASM bindings for zap1-verify - in-browser Merkle proof verification"
license = "MIT"
authors = ["zk_nd3r <zk_nd3r@frontiercompute.io>"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
zap1-verify = { path = ".." }
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
